# serializer version: 1
# name: TestScummVMGenerator.test_generate
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm',
      'rom',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '''
        030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,
        030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,
      ''',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate[config]
  '''
  [scummvm]
  gui_browser_native = false
  
  
  '''
# ---
# name: TestScummVMGenerator.test_generate_auto_detect[/tmp/Monkey Island 2/Monkey Island 2.scummvm-Monkey Island 2]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/tmp/Monkey Island 2',
      '--auto-detect',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_auto_detect[/tmp/Monkey Island 2/Monkey Island 2.scummvm-]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/tmp/Monkey Island 2',
      '--auto-detect',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_auto_detect[/tmp/Monkey Island 2/foo.txt-]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/tmp/Monkey Island 2',
      '--auto-detect',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_auto_detect[/userdata/roms/scummvm/Monkey Island 2/Monkey Island 2.scummvm-Monkey Island]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm/Monkey Island 2',
      '--auto-detect',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_auto_detect[/userdata/roms/scummvm/Monkey Island 2/Monkey Island 2.scummvm-]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm/Monkey Island 2',
      '--auto-detect',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_config[{'scumm_language': 'en'}]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '-q',
      'en',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm',
      'rom',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_config[{'scumm_renderer': 'software'}]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=software',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm',
      'rom',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_config[{'scumm_scale': '7'}]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=7',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm',
      'rom',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_config[{'scumm_scaler_mode': 'hq'}]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=hq',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm',
      'rom',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_config[{'scumm_stretch': 'even-pixels'}]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--stretch-mode=even-pixels',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm',
      'rom',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_existing
  '''
  [scummvm]
  gui_browser_native = false
  
  [foo]
  bar = true
  
  
  '''
# ---
# name: TestScummVMGenerator.test_generate_game_id[/tmp/Monkey Island 2/Monkey Island 2.scummvm-scumm:monkey2]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/tmp/Monkey Island 2',
      'scumm:monkey2',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_game_id[/tmp/Monkey Island 2/monkey2.scummvm-]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/tmp/Monkey Island 2',
      'monkey2',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_game_id[/tmp/Monkey Island 2/monkey2.scummvm-scumm:monkey2-cd-fr]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/tmp/Monkey Island 2',
      'scumm:monkey2-cd-fr',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_game_id[/userdata/roms/scummvm/Monkey Island 2/Monkey Island 2.scummvm-monkey2]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm/Monkey Island 2',
      'monkey2',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_game_id[/userdata/roms/scummvm/Monkey Island 2/Monkey Island 2.scummvm-scumm:monkey2]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm/Monkey Island 2',
      'scumm:monkey2',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_game_id[/userdata/roms/scummvm/Monkey Island 2/monkey2.scummvm-]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm/Monkey Island 2',
      'monkey2',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_generate_game_id[/userdata/roms/scummvm/Monkey Island 2/monkey2.scummvm-scumm:monkey2-cd-fr]
  tuple(
    list([
      '/usr/bin/scummvm',
      '-f',
      '--window-size=1920,1080',
      '--scale-factor=3',
      '--scaler=normal',
      '--renderer=opengl',
      '--logfile=/userdata/system/logs/scummvm.log',
      '--joystick=0',
      '--screenshotspath=/userdata/screenshots',
      '--extrapath=/userdata/bios/scummvm/extra',
      '--savepath=/userdata/saves/scummvm',
      '--path=/userdata/roms/scummvm/Monkey Island 2',
      'scumm:monkey2-cd-fr',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'XDG_CACHE_HOME': '/userdata/system/cache',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestScummVMGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': list([
        'KEY_LEFTCTRL',
        'KEY_F5',
      ]),
    }),
    'name': 'scummvm',
  })
# ---
